assert-struct/tests/snapshots/wildcard__wildcard_with_none_fails.snap
---
source: assert-struct/tests/wildcard.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/wildcard_errors/wildcard_with_none_fails.rs:27:19
   |
27 |             data: Some(_),
   |                   ^^^^ expected variant Some(...), got None
